--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "denis",
   "license": "ISC",
   "dependencies": {
+    "ava": "0.22.0",
     "chai": "4.1.2",
     "dotenv": "4.0.0",
     "karma-tools-1-3": "git+https://github.com/dudagroup/karma-tools-1-3.git"
