--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "karma-integration-tests",
   "version": "1.0.0",
-  "description": "karma integration tests",
-  "main": "index.js",
+  "description": "Karma integration tests",
   "scripts": {
-    "test": "ava --serial --watch",
+    "build": "tsc",
+    "test": "ava dist --serial",
+    "watch": "run-p watch:*",
+    "watch:test": "ava dist/*.js --serial --watch --verbose",
+    "watch:build": "tsc -w",
     "nyan": "ava --serial --tap | tap-nyan"
   },
   "keywords": [
     "karma"
   ],
-  "author": "denis",
+  "private": true,
+  "author": "karma.run",
   "license": "ISC",
-  "dependencies": {
-    "ava": "0.22.0",
-    "chai": "4.1.2",
+  "devDependencies": {
+    "ava": "^0.25.0",
     "dotenv": "4.0.0",
-    "karma-tools-1-3": "git+https://github.com/dudagroup/karma-tools-1-3.git"
+    "npm-run-all": "^4.1.2",
+    "tap-nyan": "^1.1.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
