--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "karma-integration-tests",
-  "version": "1.0.0",
-  "description": "Karma integration tests",
-  "scripts": {
-    "build": "tsc",
-    "test": "ava dist --serial",
-    "watch": "run-p watch:*",
-    "watch:test": "ava dist/*.js --serial --watch --verbose",
-    "watch:build": "tsc -w",
-    "nyan": "ava --serial --tap | tap-nyan"
-  },
-  "keywords": [
-    "karma"
-  ],
   "private": true,
-  "author": "karma.run",
-  "license": "ISC",
+  "scripts": {
+    "watch": "run-p watch:*",
+    "watch:sdk": "cd sdk && yarn watch",
+    "watch:tests": "cd tests && yarn watch",
+    "test": "cd tests && yarn test --verbose"
+  },
+  "workspaces": [
+    "sdk",
+    "tests"
+  ],
   "devDependencies": {
-    "ava": "^0.25.0",
-    "dotenv": "4.0.0",
     "npm-run-all": "^4.1.2",
-    "tap-nyan": "^1.1.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
-  },
-  "dependencies": {
-    "axios": "^0.18.0"
   }
 }
