--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "scripts": {
     "watch": "run-p watch:*",
     "watch:sdk": "cd sdk && yarn watch",
-    "watch:tests": "cd tests && yarn watch",
-    "test": "cd tests && yarn test --verbose"
+    "watch:test": "cd tests && yarn watch",
+    "test": "cd tests && yarn test",
+    "test-nyan": "cd tests && yarn test-nyan"
   },
   "workspaces": [
     "sdk",
