--- a/sdk/package.json
+++ b/sdk/package.json
@@ -2,6 +2,10 @@
   "name": "karma.run",
   "version": "0.5.0",
   "description": "Karma.run SDK",
+  "engines": {
+    "node": "^9.11.0",
+    "yarn": "^1.6.0"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
