--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
+  "include": ["src/**/*"],
   "compilerOptions": {
+    "outDir": "dist",
     "strict": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -11,6 +13,11 @@
     "moduleResolution": "node",
     "declaration": true,
     "module": "commonjs",
-    "sourceMap": true
+    "sourceMap": true,
+    "target": "es2017",
+    "lib": ["es2017"],
+    "types": [
+      "@types/node"
+    ]
   }
 }
