--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "scripts": {
     "watch": "run-p watch:*",
+    "clean": "(rm -r ./dist || true)",
     "build": "tsc",
     "watch:build": "tsc -w",
-    "test": "yarn build && ava dist/** --serial --verbose",
+    "test": "npm run clean && npm run build && ava dist/** --serial --verbose",
     "watch:test": "ava dist/** --serial --watch --verbose",
-    "test-nyan": "yarn build && ava dist/** --serial --tap | tap-nyan"
+    "test-nyan": "npm run build && ava dist/** --serial --tap | tap-nyan"
   },
   "keywords": [
     "karma"
