--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Karma integration tests",
   "engines": {
-    "node": "^9.11.0",
-    "yarn": "^1.6.0"
+    "node": ">=9.0.0",
+    "yarn": ">=1.6.0"
   },
   "scripts": {
     "watch": "run-p watch:*",
-    "clean": "(rm -r ./dist || true)",
+    "clean": "rm -r ./dist || true",
     "build": "tsc",
     "watch:build": "tsc -w",
     "test": "npm run clean && npm run build && ava dist/** --serial --verbose",
@@ -16,13 +16,13 @@
     "test-nyan": "npm run build && ava dist/** --serial --tap | tap-nyan"
   },
   "keywords": [
-    "karma"
+    "karma.run"
   ],
   "private": true,
   "author": "karma.run",
   "license": "MIT",
   "dependencies": {
-    "karma.run": "https://github.com/karmarun/js-sdk",
+    "karma.run": "https://github.com/karmarun/js-sdk.git#0.5.0-beta.1",
     "ava": "^1.0.0-beta.4",
     "dotenv": "4.0.0",
     "tap-nyan": "^1.1.0"
