--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "author": "karma.run",
   "license": "MIT",
   "dependencies": {
-    "karma.run": "https://github.com/karmarun/js-sdk.git#0.5.0-beta.1",
     "ava": "^1.0.0-beta.4",
     "dotenv": "4.0.0",
+    "karma.run": "https://github.com/karmarun/js-sdk.git#0.5.0-beta.7",
     "tap-nyan": "^1.1.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.2",
-    "typescript": "^2.8.3",
     "@types/node": "^10.0.0",
-    "tslint": "^5.9.1"
+    "npm-run-all": "^4.1.2",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3"
   }
 }
