--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "author": "karma.run",
   "license": "MIT",
   "dependencies": {
+    "@karma.run/sdk": "^0.5.0-beta.3",
     "ava": "^1.0.0-beta.4",
     "dotenv": "4.0.0",
-    "karma.run": "https://github.com/karmarun/js-sdk.git#0.5.0-beta.9",
     "tap-nyan": "^1.1.0"
   },
   "devDependencies": {
